# cc-autoswitch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  cc-autoswitch.sh  cc-autoswitch.toml.example  cc_autoswitch.py  install.sh  mypy.ini  pyproject.toml  ruff.toml  test_cc_autoswitch.py  test_cc_autoswitch_integration.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: FAQ.md  POLICY.md  threat-model.md
systemd/: cc-autoswitch.service  cc-autoswitch.timer
