[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-autoswitch"
version = "0.1.0"
description = "Quota-aware automatic Claude Code account switching on top of cswap."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Eden Gibson", email = "matthewjmartin06@gmail.com" },
]
keywords = [
    "claude",
    "claude-code",
    "cswap",
    "claude-swap",
    "quota",
    "rate-limit",
    "account-switching",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

# No Python runtime dependencies. `cc-autoswitch` shells out to `cswap`
# (claude-swap), which is an external CLI installed separately, e.g.:
#     uv tool install claude-swap
# It is NOT imported as a Python module, so it is intentionally not listed here.
dependencies = []

[project.scripts]
cc-autoswitch = "cc_autoswitch:main"

[project.urls]
Homepage = "https://github.com/EdenGibson/cc-autoswitch"
Repository = "https://github.com/EdenGibson/cc-autoswitch"
"Bug Tracker" = "https://github.com/EdenGibson/cc-autoswitch/issues"

# Single flat module: force-include just the one .py file in the wheel.
# The shell shim, systemd unit, and TOML config files are deployment
# artifacts and are intentionally excluded from the distributed wheel.
[tool.hatch.build.targets.wheel]
include = ["cc_autoswitch.py"]
